--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0"
   },
   "devDependencies": {
