--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "chai": "^4.2.0",
     "husky": "^4.3.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "truffle": "^5.1.47"
   },
   "scripts": {
     "test": "mocha --exit --recursive test"
