--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
+    "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
+    "sol-merger": "^3.1.0",
     "truffle": "^5.1.47"
   },
   "scripts": {
-    "test": "mocha --exit --recursive test"
+    "test": "mocha --timeout 10000 --exit --recursive test",
+    "build-contracts": "sol-merger \"./contracts/*.sol\" ./build"
   }
 }
