--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@chainlink/contracts": "0.0.10",
-    "@openzeppelin/contracts": "^3.2.0"
+    "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/upgrades": "^2.8.0"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
