--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
-    "truffle": "^5.1.47"
+    "truffle": "^5.1.47",
+    "verify-on-etherscan": "^1.2.1"
   },
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive test",
