--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
-    "@openzeppelin/upgrades": "^2.8.0"
+    "@openzeppelin/upgrades": "^2.8.0",
+    "truffle-contract-size": "^2.0.0"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
