--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/upgrades": "^2.8.0",
-    "truffle-contract-size": "^2.0.0"
+    "truffle-contract-size": "^2.0.0",
+    "truffle-plugin-verify": "^0.4.0"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
