--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/upgrades": "^2.8.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "truffle-contract-size": "^2.0.0",
-    "truffle-plugin-verify": "^0.4.0"
+    "truffle-plugin-verify": "^0.4.0",
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
@@ -27,6 +30,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive test",
-    "build-contracts": "sol-merger \"./contracts/*.sol\" ./build"
+    "build-contracts": "sol-merger \"./contracts/*.sol\" ./build",
+    "process-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" compiled"
   }
 }
