--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
+    "commander": "^6.2.0",
     "dotenv": "^8.2.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
