--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive test",
-    "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy --network kovan --license MIT",
+    "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy TwinYield --network kovan --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled"
   }
 }
