--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
+    "commander": "^6.2.0",
     "dotenv": "^8.2.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
@@ -30,7 +31,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive test",
-    "build-contracts": "sol-merger \"./contracts/*.sol\" ./build",
-    "process-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" compiled"
+    "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy TwinYield --network kovan --license MIT",
+    "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled"
   }
 }
