Update to use InstrumentInterface

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "scripts": {
     "test": "mocha --timeout 10000 --exit --recursive test",
     "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy TwinYield --network kovan --license MIT",
-    "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled"
+    "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled",
+    "export-artefacts": "node ./scripts/exportArtefacts.js",
+    "deploy-instrument": "node ./scripts/addTwinYield.js"
   }
 }
