--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "compile": "npx truffle compile",
     "migrate": "npx truffle migrate --network kovan",
-    "deploy-kovan": "npm run compile && npm run migrate && npm run verify && npm run export-artefacts",
+    "deploy-kovan": "npm run compile && npm run migrate && npm run verify && npm run export-artefacts && node ./scripts/addAssetFeed.js",
     "test": "mocha --timeout 10000 --exit --recursive test",
     "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy TwinYield --network kovan --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled",
