--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled",
     "export-artefacts": "node ./scripts/exportArtefacts.js",
     "deploy-instrument": "node ./scripts/addTwinYield.js",
-    "finalize-pool": "node ./scripts/finalizeBalancerPool.js"
+    "finalize-pool": "node ./scripts/finalizeBalancerPool.js",
+    "seed-pool": "node ./scripts/seedPool.js"
   }
 }
