--- a/package.json
+++ b/package.json
@@ -31,17 +31,11 @@
   },
   "scripts": {
     "compile": "npx truffle compile",
-    "migrate": "npx truffle migrate --network kovan",
-    "faucet": "node ./scripts/dripFaucet.js",
-    "deploy-kovan": "npm run compile && npm run migrate && npm run verify && npm run export-artefacts && node ./scripts/addAssetFeed.js",
     "test": "mocha --timeout 200000 --exit --recursive test",
     "verify": " npx truffle run verify DataProvider LiquidatorProxy DojimaFactory AdminUpgradeabilityProxy TwinYield --network kovan --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/compiled",
     "export-artefacts": "node ./scripts/exportArtefacts.js",
-    "deploy-instrument": "node ./scripts/addTwinYield.js",
-    "finalize-pool": "node ./scripts/finalizeBalancerPool.js",
-    "seed-pool": "node ./scripts/seedPool.js",
     "upgrade-instrument": "node ./scripts/upgradeInstrument.js",
-    "ganache": "ganache-cli --fork \"https://mainnet.infura.io/v3/d43d838246464b5690f8b10337b446d7@`node scripts/getCurrentBlock.js`\" --mnemonic 'become degree sausage theme poem flash bronze increase pioneer faith mask gas'"
+    "ganache": "ganache-cli --fork \"`node scripts/helpers/printTestURI.js`@`node scripts/helpers/getCurrentBlock.js`\""
   }
 }
