--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/upgrades": "^2.8.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "axios": "^0.21.1",
     "truffle-contract-size": "^2.0.0",
-    "truffle-plugin-verify": "^0.4.0",
-    "web3": "^1.3.0"
+    "truffle-plugin-verify": "^0.4.0"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.5",
@@ -27,7 +25,8 @@
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
-    "verify-on-etherscan": "^1.2.1"
+    "verify-on-etherscan": "^1.2.1",
+    "web3": "^1.3.1"
   },
   "scripts": {
     "compile": "npx truffle compile",
