--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "RibbonFinance",
+  "name": "RibbonFinanceSubgraph",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ kenchangh/RibbonFinance",
-    "create-local": "graph create --node http://localhost:8020/ kenchangh/RibbonFinance",
-    "remove-local": "graph remove --node http://localhost:8020/ kenchangh/RibbonFinance",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ kenchangh/ribbon-finance",
+    "create-local": "graph create --node http://localhost:8020/ kenchangh/ribbon-finance",
+    "remove-local": "graph remove --node http://localhost:8020/ kenchangh/ribbon-finance",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kenchangh/RibbonFinance"
   },
   "dependencies": {
