--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -45,4 +45,6 @@ templates:
           handler: handlePositionCreated
         - event: Purchased(indexed address,indexed string,indexed address,address,uint256,uint256,uint8,uint256,uint256,uint256)
           handler: handleOptionPurchased
+        - event: Exercised(indexed address,indexed address,indexed uint256,uint256,uint256)
+          handler: handleOptionExercise
       file: ./src/instrument.ts
