--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
+    "hardhat": "^2.0.10",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
