--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "truffle-plugin-verify": "^0.4.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
+    "ethereum-waffle": "^3.2.2",
+    "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
-    "verify-on-etherscan": "^1.2.1",
-    "web3": "^1.3.1"
+    "verify-on-etherscan": "^1.2.1"
   },
   "scripts": {
     "compile": "npx truffle compile",
