run hardhat node

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dojima-finance",
+  "name": "ribbon-finance-contracts",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
