--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
@@ -30,7 +31,8 @@
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
-    "verify-on-etherscan": "^1.2.1"
+    "verify-on-etherscan": "^1.2.1",
+    "web3": "^1.3.1"
   },
   "scripts": {
     "compile": "npx truffle compile",
