--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "web3": "^1.3.1"
   },
   "scripts": {
-    "compile": "npx truffle compile",
+    "compile": "npx hardhat compile",
     "test": "npx hardhat test",
     "verify": " npx truffle run verify RibbonFactory HegicAdapter GammaAdapter ProtocolAdapter AdminUpgradeabilityProxy RibbonVolatility --network mainnet --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/merged",
