--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
       - run: git config --global url."https://".insteadOf git://
+      - run: git config --global url."https://github.com/".insteadOf git@github.com
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
