--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,16 @@ jobs:
       - name: Cache Node.js modules
         uses: actions/cache@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: /usr/local/share/.config/yarn/global
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.OS }}-node-
             ${{ runner.OS }}-
-      - run: npm ci
-      - run: npx hardhat compile
-      - run: npm run build --if-present
-      - run: npm test
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Compile Solidity contracts
+        run: yarn compile
+      - run: yarn test
         env:
           TEST_URI: ${{ secrets.TEST_URI }}
           CI: true
