--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ribbon-finance-contracts",
   "version": "1.0.0",
-  "description": "",
+  "license": "MIT",
+  "description": "Smart contracts for Ribbon.finance",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -17,7 +18,6 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
