--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,24 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Cache Node.js modules
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         uses: actions/cache@v2
         with:
-          path: /usr/local/share/.config/yarn/global
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/yarn.lock') }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
+            ${{ runner.OS }}-yarn-
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Compile Solidity contracts
         run: yarn compile
+        env:
+          TEST_URI: ${{ secrets.TEST_URI }}
+          CI: true
       - run: yarn test
         env:
           TEST_URI: ${{ secrets.TEST_URI }}
