--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
+    "hardhat-log-remover": "^2.0.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
