--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,23 +11,32 @@ jobs:
         node-version: [10.16]
 
     steps:
+      - run: git config --global url."https://".insteadOf git://
+      - run: git config --global url."https://github.com/".insteadOf git@github.com
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Cache Node.js modules
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         uses: actions/cache@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-      - run: npm ci
-      - run: npx truffle compile
-      - run: npm run build --if-present
-      - run: npm test
+            ${{ runner.OS }}-yarn-
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Compile Solidity contracts
+        run: yarn compile
+        env:
+          TEST_URI: ${{ secrets.TEST_URI }}
+          CI: true
+      - run: yarn test
         env:
           TEST_URI: ${{ secrets.TEST_URI }}
           CI: true
