--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "dojima-finance",
+  "name": "ribbon-finance-contracts",
   "version": "1.0.0",
-  "description": "",
+  "license": "MIT",
+  "description": "Smart contracts for Ribbon.finance",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -15,12 +16,18 @@
     "truffle-plugin-verify": "^0.4.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
+    "ethereum-waffle": "^3.2.2",
+    "ethers": "^5.0.31",
+    "hardhat": "^2.0.10",
+    "hardhat-log-remover": "^2.0.0",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
@@ -29,8 +36,8 @@
     "web3": "^1.3.1"
   },
   "scripts": {
-    "compile": "npx truffle compile",
-    "test": "mocha --timeout 200000 --exit --recursive test --exclude test/adapters/GammaAdapter.js",
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
     "verify": " npx truffle run verify RibbonFactory HegicAdapter GammaAdapter ProtocolAdapter AdminUpgradeabilityProxy RibbonVolatility --network mainnet --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/merged",
     "export-artefacts": "node ./scripts/exportArtefacts.js",
