--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hardhat": "^2.0.10",
     "hardhat-log-remover": "^2.0.0",
     "husky": "^4.3.0",
+    "ipfs-core": "^0.5.2",
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
