--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mocha": "^8.1.3",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
     "verify-on-etherscan": "^1.2.1",
     "web3": "^1.3.1"
   },
