--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^4.3.0",
     "ipfs-core": "^0.5.2",
     "mocha": "^8.1.3",
+    "moment": "^2.29.1",
     "sol-merger": "^3.1.0",
     "truffle": "^5.1.47",
     "ts-node": "^9.1.1",
