Use oz upgradeable

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@airswap/utils": "0.4.2",
     "@chainlink/contracts": "0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "@openzeppelin/upgrades": "^2.8.0",
     "axios": "^0.21.1",
     "truffle-contract-size": "^2.0.0",
