--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "mocha": "^8.1.3",
     "moment": "^2.29.1",
     "sol-merger": "^3.1.0",
+    "solc-0.7.2": "npm:solc@^0.7.2",
     "solidity-coverage": "^0.7.16",
+    "solidity-docgen": "^0.5.11",
     "truffle": "^5.1.47",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
