--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "@openzeppelin/upgrades": "^2.8.0",
     "axios": "^0.21.1",
+    "moment-timezone": "^0.5.33",
     "truffle-contract-size": "^2.0.0",
     "truffle-plugin-verify": "^0.4.0"
   },
