--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
+    "@uniswap/v2-periphery": "1.0.0-beta.0",
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
