--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.25.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
     "hardhat-log-remover": "^2.0.0",
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
     "mocha": "^8.1.3",
     "moment": "^2.29.1",
     "sol-merger": "^3.1.0",
@@ -51,6 +52,11 @@
     "upgrade-instrument": "node ./scripts/upgradeInstrument.js",
     "ganache": "ganache-cli --fork \"`node scripts/helpers/printTestURI.js`@`node scripts/helpers/getCurrentBlock.js`\" --forkCacheSize '-1'",
     "clean-logs": "yarn run hardhat remove-logs",
-    "coverage": "npx hardhat coverage --testfiles 'test/**.js'"
+    "coverage": "npx hardhat coverage --testfiles 'test/**.js'",
+    "lint:tests": "eslint 'test/**/*.js'",
+    "lint:tests:fix": "yarn lint:tests -- --fix",
+    "lint:sol": "solhint -f table contracts/**/*.sol",
+    "lint:sol:prettier:fix": "prettier --write \"contracts/**/*.sol\"",
+    "lint:tests:prettier:fix": "prettier --write \"test/**/*.js\""
   }
 }
