--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,8 @@
         "func-names": "off",
         "func-style": [
             "error",
-            "declaration"
+            "declaration",
+            { "allowArrowFunctions": true }
         ],
         "function-call-argument-newline": [
             "error",
