--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,12 @@
-{}
+{
+  "tabWidth": 2,
+  "overrides": [
+    {
+      "files": "contracts/**/*.sol",
+      "options": {
+        "tabWidth": 4,
+        "singleQuote": false
+      }
+    }
+  ]
+}
