--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
@@ -35,7 +37,11 @@
     "husky": "^6.0.0",
     "mocha": "^8.1.3",
     "moment": "^2.29.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.10",
     "sol-merger": "^3.1.0",
+    "solhint": "^3.3.4",
+    "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.16",
     "truffle": "^5.1.47",
     "ts-node": "^9.1.1",
