Convert scripts to typescript

--- a/package.json
+++ b/package.json
@@ -56,9 +56,8 @@
     "test": "npx hardhat test",
     "verify": "npx truffle run verify RibbonFactory HegicAdapter GammaAdapter ProtocolAdapter AdminUpgradeabilityProxy RibbonVolatility RibbonThetaVault --network mainnet --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/merged",
-    "export-artefacts": "node ./scripts/exportArtefacts.js",
-    "upgrade-instrument": "node ./scripts/upgradeInstrument.js",
-    "ganache": "ganache-cli --fork \"`node scripts/helpers/printTestURI.js`@`node scripts/helpers/getCurrentBlock.js`\" --forkCacheSize '-1'",
+    "export-artefacts": "ts-node ./scripts/exportABI.ts",
+    "ganache": "ganache-cli --fork \"`ts-node scripts/helpers/printTestURI.ts`@`ts-node scripts/helpers/getCurrentBlock.ts`\" --forkCacheSize '-1'",
     "clean-logs": "yarn run hardhat remove-logs",
     "coverage": "npx hardhat coverage --testfiles 'test/**.js'",
     "lint:js": "eslint 'test/**/*.js' 'migrations/*.js' 'scripts/**/*.js'",
