--- a/package.json
+++ b/package.json
@@ -51,6 +51,27 @@
     "verify-on-etherscan": "^1.2.1",
     "web3": "^1.3.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.sol": [
+      "yarn lint:sol:prettier",
+      "git add"
+    ],
+    "test/**": [
+      "yarn lint:js:fix",
+      "yarn lint:js:prettier",
+      "git add"
+    ],
+    "scripts/**": [
+      "yarn lint:ts:fix",
+      "yarn lint:ts:prettier",
+      "git add"
+    ]
+  },
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
