--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hardhat": "^2.0.10",
     "hardhat-log-remover": "^2.0.0",
     "husky": "^6.0.0",
+    "lint-staged": ">=10",
     "mocha": "^8.1.3",
     "moment": "^2.29.1",
     "prettier": "^2.2.1",
@@ -58,18 +59,19 @@
   },
   "lint-staged": {
     "contracts/**/*.sol": [
-      "yarn lint:sol:prettier",
-      "git add"
+      "yarn lint:sol:prettier"
     ],
     "test/**": [
-      "yarn lint:js:fix",
-      "yarn lint:js:prettier",
-      "git add"
+      "yarn lint:test:fix",
+      "yarn lint:test:prettier"
     ],
     "scripts/**": [
       "yarn lint:ts:fix",
-      "yarn lint:ts:prettier",
-      "git add"
+      "yarn lint:ts:prettier"
+    ],
+    "migrations/**": [
+      "yarn lint:js:fix",
+      "yarn lint:js:prettier"
     ]
   },
   "scripts": {
@@ -81,12 +83,16 @@
     "ganache": "ganache-cli --fork \"`ts-node scripts/helpers/printTestURI.ts`@`ts-node scripts/helpers/getCurrentBlock.ts`\" --forkCacheSize '-1'",
     "clean-logs": "yarn run hardhat remove-logs",
     "coverage": "npx hardhat coverage --testfiles 'test/**.js'",
-    "lint:js": "eslint 'test/**/*.js' 'migrations/*.js' 'scripts/**/*.js'",
+    "lint:test": "eslint 'test/**/*.js'",
+    "lint:test:fix": "yarn lint:test --fix",
+    "lint:test:prettier": "prettier --write 'test/**/*.js'",
+    "lint:js": "eslint 'migrations/*.js' 'scripts/**/*.js'",
     "lint:js:fix": "yarn lint:js --fix",
-    "lint:js:prettier": "prettier --write 'test/**/*.js' 'migrations/*.js' 'scripts/**/*.{js,ts}'",
+    "lint:js:prettier": "prettier --write 'migrations/*.js' 'scripts/**/*.{js,ts}'",
     "lint:ts": "eslint --config .eslintrc.ts.json 'scripts/**/*.ts'",
     "lint:ts:fix": "yarn lint:ts --fix",
     "lint:sol": "solhint -f table contracts/**/*.sol",
-    "lint:sol:prettier": "prettier --write \"contracts/**/*.sol\""
+    "lint:sol:prettier": "prettier --write \"contracts/**/*.sol\"",
+    "prepare": "husky install"
   }
 }
