Split out into further lints

--- a/package.json
+++ b/package.json
@@ -86,11 +86,12 @@
     "lint:test": "eslint 'test/**/*.js'",
     "lint:test:fix": "yarn lint:test --fix",
     "lint:test:prettier": "prettier --write 'test/**/*.js'",
-    "lint:js": "eslint 'migrations/*.js' 'scripts/**/*.js'",
+    "lint:js": "eslint 'migrations/*.js'",
     "lint:js:fix": "yarn lint:js --fix",
-    "lint:js:prettier": "prettier --write 'migrations/*.js' 'scripts/**/*.{js,ts}'",
+    "lint:js:prettier": "prettier --write 'migrations/*.js'",
     "lint:ts": "eslint --config .eslintrc.ts.json 'scripts/**/*.ts'",
     "lint:ts:fix": "yarn lint:ts --fix",
+    "lint:ts:prettier": "prettier --write 'scripts/**/*.ts'",
     "lint:sol": "solhint -f table contracts/**/*.sol",
     "lint:sol:prettier": "prettier --write \"contracts/**/*.sol\"",
     "prepare": "husky install"
