--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on: [push]
 
 jobs:
-  build:
+  Unit test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -40,3 +40,39 @@ jobs:
         env:
           TEST_URI: ${{ secrets.TEST_URI }}
           CI: true
+  Lint:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.13.0]
+
+    steps:
+      - run: git config --global url."https://".insteadOf git://
+      - run: git config --global url."https://github.com/".insteadOf git@github.com
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Node.js modules
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.OS }}-yarn-
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Lint contracts
+        run: yarn lint:sol
+      - name: Lint tests
+        run: yarn lint:test
+      - name: Lint scripts
+        run: yarn lint:ts
+      - name: Lint migrations
+        run: yarn lint:js
