--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "lint-staged": {
     "contracts/**/*.sol": [
+      "yarn lint:sol",
       "yarn lint:sol:prettier"
     ],
     "test/**": [
