--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
     "@truffle/hdwallet-provider": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.2.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
     "hardhat-log-remover": "^2.0.0",
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": ">=10",
     "mocha": "^8.1.3",
     "moment": "^2.29.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.10",
     "sol-merger": "^3.1.0",
+    "solhint": "^3.3.4",
+    "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.16",
     "truffle": "^5.1.47",
     "ts-node": "^9.1.1",
@@ -42,15 +52,49 @@
     "verify-on-etherscan": "^1.2.1",
     "web3": "^1.3.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "contracts/**/*.sol": [
+      "yarn lint:sol",
+      "yarn lint:sol:prettier"
+    ],
+    "test/**": [
+      "yarn lint:test:fix",
+      "yarn lint:test:prettier"
+    ],
+    "scripts/**": [
+      "yarn lint:ts:fix",
+      "yarn lint:ts:prettier"
+    ],
+    "migrations/**": [
+      "yarn lint:js:fix",
+      "yarn lint:js:prettier"
+    ]
+  },
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
     "verify": "npx truffle run verify RibbonFactory HegicAdapter GammaAdapter ProtocolAdapter AdminUpgradeabilityProxy RibbonVolatility RibbonThetaVault --network mainnet --license MIT",
     "merge-contracts": "sol-merger  --export-plugin SPDXLicenseRemovePlugin \"./contracts/**/*.sol\" ./build/merged",
-    "export-artefacts": "node ./scripts/exportArtefacts.js",
-    "upgrade-instrument": "node ./scripts/upgradeInstrument.js",
-    "ganache": "ganache-cli --fork \"`node scripts/helpers/printTestURI.js`@`node scripts/helpers/getCurrentBlock.js`\" --forkCacheSize '-1'",
+    "export-artefacts": "ts-node ./scripts/exportABI.ts",
+    "ganache": "ganache-cli --fork \"`ts-node scripts/helpers/printTestURI.ts`@`ts-node scripts/helpers/getCurrentBlock.ts`\" --forkCacheSize '-1'",
     "clean-logs": "yarn run hardhat remove-logs",
-    "coverage": "npx hardhat coverage --testfiles 'test/**.js'"
+    "coverage": "npx hardhat coverage --testfiles 'test/**.js'",
+    "lint:test": "eslint 'test/**/*.js'",
+    "lint:test:fix": "yarn lint:test --fix",
+    "lint:test:prettier": "prettier --write 'test/**/*.js'",
+    "lint:js": "eslint 'migrations/*.js'",
+    "lint:js:fix": "yarn lint:js --fix",
+    "lint:js:prettier": "prettier --write 'migrations/*.js'",
+    "lint:ts": "eslint --config .eslintrc.ts.json 'scripts/**/*.ts'",
+    "lint:ts:fix": "yarn lint:ts --fix",
+    "lint:ts:prettier": "prettier --write 'scripts/**/*.ts'",
+    "lint:sol": "solhint -f table contracts/**/*.sol",
+    "lint:sol:prettier": "prettier --write \"contracts/**/*.sol\"",
+    "prepare": "husky install"
   }
 }
