--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -274,7 +274,7 @@
             "error",
             "last"
         ],
-        "sort-imports": "error",
+        "sort-imports": "off",
         "sort-keys": "off",
         "sort-vars": "off",
         "space-before-blocks": "error",
