--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.2.0",
+    "colors": "^1.4.0",
     "commander": "^6.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.25.0",
